# pruna

./:  [conflicted 2].coverage   [conflicted 3].coverage   [conflicted 4].coverage   [conflicted 5].coverage   [conflicted 6].coverage   [conflicted 7].coverage   [conflicted].coverage  .gitignore  .pre-commit-config.yaml  AI_CONTRIBUTION_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MSE_IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  straight_in_pruna.md  straight_in_pruna.py  test.py  test_dsg_implementation.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md
.github/actions/setup-uv-project/: action.yml
.github/scripts/: assign_reviewers.py  codeowners_assignment
.github/workflows/: README.md  assign-reviewers.yaml  build.yaml  cpu_tests.yaml  docs.yaml  documentation.yaml  external_contributions_tests.yaml  installation.yaml  internal_contributions_tests.yaml  linting.yaml  package_build.yaml  pr-stats.yaml  pr-title.yaml  stale.yaml  tests.yaml
docs/: VLM_METRICS_PROMPT_COMPARISON.md  خاص بي
docs/contributions/: adding_metric.rst  contributions_toc.rst  how_to_contribute.rst  opening_an_issue.rst  telemetry.rst
docs/plans/: 2025-02-26-benchmark-unification.md
docs/tutorials/: asr_tutorial.ipynb  computer_vision.ipynb  cv_cpu.ipynb  deploying_sana_tutorial.ipynb  diffusers_tutorial.ipynb  diffusion_quantization_acceleration.ipynb  evaluation_agent_cmmd.ipynb  flux.1-dev_tutorial.ipynb  flux2klein4b_tutorial copy.ipynb  flux2klein4b_tutorial.ipynb  flux_small.ipynb  hidream_tutorial.ipynb  image_generation.ipynb  in_tutorials.ipynb  in_tutorials.py  index.rst  llm_quantization_compilation_acceleration.ipynb  llms.ipynb  portable_compilation.ipynb  reasoning_llm.ipynb  recovery.ipynb  ring_attn.ipynb  sana_diffusers_int8.ipynb  sd_deepcache.ipynb  target_modules_quanto.ipynb  video_generation copy 2.ipynb  video_generation copy.ipynb  video_generation.ipynb
docs/user_manual/: adding_algorithm.rst  adding_dataset.rst  adding_metric.rst  configure.rst  customize.rst  customize_algorithm.rst  customize_dataset.rst  customize_metric.rst  dataset.rst  evaluate.rst  evaluation.rst  optimize.rst  power_user.rst  save_load.rst  smash.rst  smash_config.rst  target_modules.rst  tensor_annotations.rst
docs/user_manual/metrics/: mse.md
docs/user_manual/old/: dataset.rst
docs/utils/: gen_docs.py  target_modules.rst
scripts/: lint-before-push.sh  smoke_vlm_metrics.py  test_vlm_base_infrastructure_infra.py  verify-vlm-stack-ci.sh
src/pruna/: alaki.py  in_src_pruna.ipynb  in_src_pruna.py  smash.py
src/pruna/algorithms/: __init__.py  c_translate.py  deepcache.py  denoise.py  distillation_perp.py  fastercache.py  flash_attn3.py  fora.py  gptq_model.py  half.py  hqq.py  hqq_diffusers.py  huggingface_diffusers_int8.py  huggingface_llm_int8.py  hyper.py  ifw.py  ipex_llm.py  kvpress.py  llama_cpp.py  llm_compressor.py  moe_kernel_tuner.py  pab.py  padding_pruning.py  perp.py  pruna_base.py  qkv_diffusers.py  quanto.py  red_noe.py  reduce_noe.py  sage_attn.py  shortgpt.py  sparge_attn.py  stable_fast.py  token_merging.py  torch_dynamic.py  torch_structured.py  torch_unstructured.py  torchao.py  torchao_autoquant.py  upscale.py  (+2 more)
src/pruna/config/: compatibility_checks.py  hyperparameters.py  pre_smash_routines.py  smash_config.py  smash_space.py  target_modules.py  utils.py
src/pruna/data/: __init__.py  collate.py  diffuser_distillation_data_module.py  pruna_datamodule.py  utils.py
src/pruna/engine/: call_sequence_tracker.py  civitai.py  load.py  load_artifacts.py  model_card_template.md  model_checks.py  pre_smash_setup.py  pruna_model.py  save.py  save_artifacts.py  utils.py
src/pruna/evaluation/: benchmark_vlm_integration.py  benchmarks.py  evaluation_agent.py  task.py  vlm_benchmark_helpers.py
src/pruna/logging/: logger.py
src/pruna/telemetry/: metrics.py
tests/: __init__.py  common.py  conftest.py  fixtures.py  in_tests.py
tests/algorithms/: test_algorithms.py  test_combinations.py  test_compatibility_symmetry.py  test_kvpress.py  test_quantization_hqq_opt.py
tests/algorithms/testers/: __init__.py  autoquant.py  awq.py  base_tester.py  caching.py  cgenerate.py  compilation.py  deepcache.py  denoise.py  diffusers_int8.py  factorizing.py  fastercache.py  flash_attn3.py  fora.py  fusing.py  gptq.py  half.py  hqq.py  hqq_diffusers.py  hyper.py  ifw.py  ipex_llm.py  kernels.py  kvpress.py  llama_cpp.py  llm_int8.py  moe_kernel_tuner.py  pab.py  padding_pruning.py  pruning.py  qkv_diffusers.py  quantization.py  quanto.py  red_noe.py  reduce_noe.py  ring_distributer.py  sage_attn.py  stable_fast.py  (+19 more)
tests/config/: test_deprecation.py  test_device.py  test_logging.py  test_model_compatibility.py  test_pre_smash_hook.py  test_pre_smash_routines.py  test_smashconfig_data.py  test_target_modules.py  test_version_tracking.py
tests/data/: test_collate.py  test_datamodule.py  test_oneig_loader.py
tests/documentation/: test_code_blocks.py  test_readme.py  test_tutorials.py
tests/engine/: test_civitai_loader.py  test_device.py  test_handler.py  test_load.py  test_save.py
tests/evaluation/: _vlm_batch_snapshot_helpers.py  test_aesthetics_laion.py  test_aesthetics_liaon.py  test_artifactsaver.py  test_benchmarks.py  test_benchmarks_integration.py  test_cmmd.py  test_device_compatibility.py  test_dino_score.py  test_dsg_integration.py  test_energy_metrics.py  test_evalagent.py  test_evalharness_metrics.py  test_face_score.py  test_geneval_task_metrics.py  test_image_reward_metric.py  test_inference_time_metrics.py  test_memory_metrics.py  test_metric_dsg.py  test_model_architecture_metrics.py  test_mse.py  test_oneig_alignment.py  test_oneig_reasoning.py  test_rapidata.py  test_registry.py  test_reward_metric.py  test_sharpness.py  test_t2i_compbench.py  test_task.py  test_text_metrics.py  test_torch_metrics.py  test_vbench_metrics.py  test_vision_metrics.py  test_vlm_e2e.py  test_vlm_metrics.py  test_vlm_utils.py
tests/style/: test_docstrings.py
tests/telemetry/: test_metrics.py
(+149 files in other folders)
