[tool.ruff]
exclude = ["test_*.py"]
line-length = 121

[tool.ruff.lint]
ignore = ["ANN002", "ANN003", "ANN401", "C901", "D100", "D104", "D401", "D406", "C408", "PTH123", "N813"]
select = ["A", "C", "CPY", "D", "E", "ERA", "F", "FIX", "I", "N", "SIM", "T20", "W", "FA", "PTH"]
preview = true # enable preview features for copyright checking

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ERA", "CPY", "T"]  # commented out code is intended for tutorials
"tests/*" = ["T20", "CPY"]  # print statements are intended for tests
"docs/*" = ["CPY"]
"src/pruna/algorithms/base/tags.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-copyright]
author = "- Pruna AI GmbH"

[tool.ty.rules]
# Ignore rules that are stricter than mypy for transition period
unresolved-import = "ignore"
invalid-assignment = "ignore"  # mypy is more permissive with Any assignments
call-non-callable = "ignore"   # mypy allows more dynamic method calls
index-out-of-bounds = "ignore" # mypy is more permissive with tuple indexing
unresolved-attribute = "ignore" # mypy is more permissive with module attributes
redundant-cast = "ignore"      # mypy doesn't warn about redundant casts
unsupported-operator = "ignore" # mypy supports | syntax with from __future__ import annotations
invalid-argument-type = "ignore" # mypy is more permissive with argument types
invalid-return-type = "ignore" # mypy is more permissive with return types
invalid-parameter-default = "ignore" # mypy is more permissive with parameter defaults
no-matching-overload = "ignore" # mypy is more permissive with overloads
unresolved-reference = "ignore" # mypy is more permissive with references
possibly-unbound-import = "ignore"
missing-argument = "ignore"

[tool.coverage.run]
source = ["src/pruna"]

[tool.coverage.report]
omit = ["src/pruna/tests/*"]
show_missing = true
skip_covered = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

addopts = [
    "--cov=src/pruna",
    "--cov-report=term-missing",
    "--cov-config=pyproject.toml",
    "--durations=0"
]

python_files = "test_*.py"

testpaths = [
    "tests/",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"  # regular PyPI

[[tool.uv.index]]
name = "pruna_internal"
url = "https://prunaai.pythonanywhere.com/simple/"  # Pruna Pythonanywhere
default = true # default = True makes this index the lowest prio

[tool.uv.sources]
gptqmodel = [
  { index = "pruna_internal", marker = "sys_platform != 'darwin' or platform_machine != 'arm64'"},
  { index = "pypi", marker = "sys_platform == 'darwin' and platform_machine == 'arm64'"},
]

[project]
name = "pruna"
version = "0.3.1"
description = "Smash your AI models"
authors = [
    {name = "Pruna AI", email = "hello@pruna.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = ["AI", "machine learning", "model optimization", "pruning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchmetrics[image]==1.7.4",
    "requests>=2.31.0",
    "transformers",
    "pytorch-lightning",
    "huggingface-hub[hf-xet]>=0.30.0",
    "datasets>=3.0",
    "numpy>=1.24.4",
    "numpydoc>=1.6.0",
    "diffusers>=0.21.4",
    "torch_pruning",
    "ConfigSpace>=1.2.1",
    "sentencepiece",
    "librosa",
    "openvino",
    "soundfile",
    "DeepCache",
    "colorama",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "codecarbon",
    "pynvml",
    "thop",
    "timm",
    "bitsandbytes; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "optimum-quanto>=0.2.5",
    "ctranslate2==4.6.0",
    "whisper-s2t==1.3.1",
    "hqq==0.2.7.post1",
    "torchao>=0.12.0", #ref: https://github.com/pytorch/ao/issues/2919#issue-3375688762
    "llmcompressor",
    "gliner; python_version >= '3.10'",
    "piq",
    "opencv-python",
    "kernels",
    "aenum",
    "vbench-pruna; sys_platform != 'darwin'",
    "imageio-ffmpeg",
    "jaxtyping",
    "peft>=0.17.1",
]

[project.optional-dependencies]
stable-fast = [
    "xformers>=0.0.30",
    "stable-fast-pruna==1.0.8",
]
# dependencies are added here because the wheels aren't bundling them
gptq = [
    "logbar",
    "tokenicer",
    "threadpoolctl",
    "device-smi",
    "random-word",
    "gptqmodel==4.0.0.dev0+cu126torch2.7; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "gptqmodel; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
full = [
    "xformers>=0.0.30",
    "stable-fast-pruna==1.0.8",
]
dev = [
    "wget",
    "python-dotenv",
    "jsonschema",
    "jupyterlab",
    "ipykernel",
    "notebook",
    "platformdirs",
    "jsonschema",
    "blobfile",
    "pillow>=9.5.0",
    "pre-commit",
    "twine",
    "pyc-wheel",
    "ruff",
    "numpydoc>=1.9.0",
    "numpydoc-validation",
    "pytest",
    "pytest-cov",
    "pytest-rerunfailures",
    "coverage",
    "docutils",
    "ty==0.0.16",
    "types-PyYAML",
    "logbar",
    "pytest-xdist>=3.8.0",
]
cpu = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pruna"]
include = ["**/*.so"]
exclude = [
    "tests*",
    "docs*",
]
